Successful config login

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,11 @@
   <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.css">
+
+   <!-- Toastr -->
+   <link rel="stylesheet" href="plugins/toastr/toastr.min.css">
+
+
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
@@ -67,6 +72,11 @@
   <script src="plugins/summernote/summernote-bs4.min.js"></script>
   <!-- overlayScrollbars -->
   <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+
+  <!-- Toastr -->
+<script src="plugins/toastr/toastr.min.js"></script>
+
+
   <!-- AdminLTE App -->
   <script src="js/adminlte.js"></script>
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
