--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,39 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Semilleros POLI</title>
 
+  <!-- Select2 -->
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/select2/css/select2.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
+  
   <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
-  <script type="text/javascript" src="test.js"></script>
-  <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
+  <script type="text/javascript" src="<%= BASE_URL %>test.js"></script>
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <!-- Tempusdominus Bbootstrap 4 -->
-  <link rel="stylesheet" href="plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
   <!-- iCheck -->
-  <link rel="stylesheet" href="plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/icheck-bootstrap/icheck-bootstrap.min.css">
   <!-- JQVMap -->
-  <link rel="stylesheet" href="plugins/jqvmap/jqvmap.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/jqvmap/jqvmap.min.css">
   <!-- Theme style -->
-  <link rel="stylesheet" href="css/adminlte.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>css/adminlte.min.css">
   <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
   <!-- Daterange picker -->
-  <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/daterangepicker/daterangepicker.css">
   <!-- summernote -->
-  <link rel="stylesheet" href="plugins/summernote/summernote-bs4.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/summernote/summernote-bs4.css">
 
    <!-- Toastr -->
-   <link rel="stylesheet" href="plugins/toastr/toastr.min.css">
+   <link rel="stylesheet" href="<%= BASE_URL %>plugins/toastr/toastr.min.css">
 
    <!-- DataTables -->
-  <link rel="stylesheet" href="plugins/datatables-bs4/css/dataTables.bootstrap4.css">
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/datatables-bs4/css/dataTables.bootstrap4.css">
 
-
+  
   <!-- Google Font: Source Sans Pro -->
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link href="<%= BASE_URL %>https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 
 <body>
@@ -48,48 +52,51 @@
 
 
   <!-- jQuery -->
-  <script src="plugins/jquery/jquery.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/jquery/jquery.min.js"></script>
   <!-- jQuery UI 1.11.4 -->
-  <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/jquery-ui/jquery-ui.min.js"></script>
   <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
   <script>
     $.widget.bridge('uibutton', $.ui.button)
   </script>
   <!-- Bootstrap 4 -->
-  <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- ChartJS -->
-  <script src="plugins/chart.js/Chart.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/chart.js/Chart.min.js"></script>
   <!-- Sparkline -->
-  <script src="plugins/sparklines/sparkline.js"></script>
+  <script src="<%= BASE_URL %>plugins/sparklines/sparkline.js"></script>
   <!-- JQVMap -->
-  <script src="plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+  <script src="<%= BASE_URL %>plugins/jqvmap/jquery.vmap.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
   <!-- jQuery Knob Chart -->
-  <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/jquery-knob/jquery.knob.min.js"></script>
   <!-- daterangepicker -->
-  <script src="plugins/moment/moment.min.js"></script>
-  <script src="plugins/daterangepicker/daterangepicker.js"></script>
+  <script src="<%= BASE_URL %>plugins/moment/moment.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/daterangepicker/daterangepicker.js"></script>
   <!-- Tempusdominus Bootstrap 4 -->
-  <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
   <!-- Summernote -->
-  <script src="plugins/summernote/summernote-bs4.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/summernote/summernote-bs4.min.js"></script>
   <!-- overlayScrollbars -->
-  <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 
   <!-- DataTables -->
-<script src="plugins/datatables/jquery.dataTables.js"></script>
-<script src="plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
+<script src="<%= BASE_URL %>plugins/datatables/jquery.dataTables.js"></script>
+<script src="<%= BASE_URL %>plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
 
   <!-- Toastr -->
-<script src="plugins/toastr/toastr.min.js"></script>
+<script src="<%= BASE_URL %>plugins/toastr/toastr.min.js"></script>
+
+<!-- Select2 -->
+<script src="<%= BASE_URL %>plugins/select2/js/select2.full.min.js"></script>
 
 
   <!-- AdminLTE App -->
-  <script src="js/adminlte.js"></script>
+  <script src="<%= BASE_URL %>js/adminlte.js"></script>
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <!-- <script src="js/pages/dashboard.js"></script> -->
+  <!-- <script src="<%= BASE_URL %>js/pages/dashboard.js"></script> -->
   <!-- AdminLTE for demo purposes -->
-  <script src="js/demo.js"></script>
+  <script src="<%= BASE_URL %>js/demo.js"></script>
 </body>
 
 
