--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,12 @@
 
    <!-- DataTables -->
   <link rel="stylesheet" href="<%= BASE_URL %>plugins/datatables-bs4/css/dataTables.bootstrap4.css">
-
+  <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
   
   <!-- Google Font: Source Sans Pro -->
-  <link href="<%= BASE_URL %>https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
+  <li
   
 </head>
 
@@ -101,6 +102,7 @@
   <!-- AdminLTE for demo purposes -->
   <script src="<%= BASE_URL %>js/demo.js"></script>
 
+  <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
   
 </body>
 
