--- a/public/index.html
+++ b/public/index.html
@@ -12,9 +12,9 @@
   <!-- Select2 -->
   <link rel="stylesheet" href="<%= BASE_URL %>plugins/select2/css/select2.min.css">
   <link rel="stylesheet" href="<%= BASE_URL %>plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
-  
+
   <!-- Optional: include a polyfill for ES6 Promises for IE11 -->
-  
+
   <link rel="stylesheet" href="<%= BASE_URL %>plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="<%= BASE_URL %>https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
@@ -33,78 +33,74 @@
   <!-- summernote -->
   <link rel="stylesheet" href="<%= BASE_URL %>plugins/summernote/summernote-bs4.css">
 
-   <!-- Toastr -->
-   <link rel="stylesheet" href="<%= BASE_URL %>plugins/toastr/toastr.min.css">
+  <!-- Toastr -->
+  <link rel="stylesheet" href="<%= BASE_URL %>plugins/toastr/toastr.min.css">
 
-   <!-- DataTables -->
+  <!-- DataTables -->
   <link rel="stylesheet" href="<%= BASE_URL %>plugins/datatables-bs4/css/dataTables.bootstrap4.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.dataTables.min.css">
-  
+
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-  <li
-  
-</head>
+  <li </head> <body>
 
-<body>
+    <div class="wrapper">
+      <div id="app"></div>
 
-  <div class="wrapper">
-    <div id="app"></div>
-    
-  </div>
+    </div>
 
 
-  <!-- jQuery -->
-  <script src="<%= BASE_URL %>plugins/jquery/jquery.min.js"></script>
-  <!-- jQuery UI 1.11.4 -->
-  <script src="<%= BASE_URL %>plugins/jquery-ui/jquery-ui.min.js"></script>
-  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-  <script>
-    $.widget.bridge('uibutton', $.ui.button)
-  </script>
-  <!-- Bootstrap 4 -->
-  <script src="<%= BASE_URL %>plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- ChartJS -->
-  <script src="<%= BASE_URL %>plugins/chart.js/Chart.min.js"></script>
-  <!-- Sparkline -->
-  <script src="<%= BASE_URL %>plugins/sparklines/sparkline.js"></script>
-  <!-- JQVMap -->
-  <script src="<%= BASE_URL %>plugins/jqvmap/jquery.vmap.min.js"></script>
-  <script src="<%= BASE_URL %>plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-  <!-- jQuery Knob Chart -->
-  <script src="<%= BASE_URL %>plugins/jquery-knob/jquery.knob.min.js"></script>
-  <!-- daterangepicker -->
-  <script src="<%= BASE_URL %>plugins/moment/moment.min.js"></script>
-  <script src="<%= BASE_URL %>plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="<%= BASE_URL %>plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Summernote -->
-  <script src="<%= BASE_URL %>plugins/summernote/summernote-bs4.min.js"></script>
-  <!-- overlayScrollbars -->
-  <script src="<%= BASE_URL %>plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <!-- jQuery -->
+    <script src="<%= BASE_URL %>plugins/jquery/jquery.min.js"></script>
+    <!-- jQuery UI 1.11.4 -->
+    <script src="<%= BASE_URL %>plugins/jquery-ui/jquery-ui.min.js"></script>
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <script>
+      $.widget.bridge('uibutton', $.ui.button)
+    </script>
+    <!-- Bootstrap 4 -->
+    <script src="<%= BASE_URL %>plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!-- ChartJS -->
+    <script src="<%= BASE_URL %>plugins/chart.js/Chart.min.js"></script>
+    <!-- Sparkline -->
+    <script src="<%= BASE_URL %>plugins/sparklines/sparkline.js"></script>
+    <!-- JQVMap -->
+    <script src="<%= BASE_URL %>plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <!-- jQuery Knob Chart -->
+    <script src="<%= BASE_URL %>plugins/jquery-knob/jquery.knob.min.js"></script>
+    <!-- daterangepicker -->
+    <script src="<%= BASE_URL %>plugins/moment/moment.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/daterangepicker/daterangepicker.js"></script>
+    <!-- Tempusdominus Bootstrap 4 -->
+    <script src="<%= BASE_URL %>plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <!-- Summernote -->
+    <script src="<%= BASE_URL %>plugins/summernote/summernote-bs4.min.js"></script>
+    <!-- overlayScrollbars -->
+    <script src="<%= BASE_URL %>plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 
-  <!-- DataTables -->
-<script src="<%= BASE_URL %>plugins/datatables/jquery.dataTables.js"></script>
-<script src="<%= BASE_URL %>plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
+    <!-- DataTables -->
+    <script src="<%= BASE_URL %>plugins/datatables/jquery.dataTables.js"></script>
+    <script src="<%= BASE_URL %>plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
 
-  <!-- Toastr -->
-<script src="<%= BASE_URL %>plugins/toastr/toastr.min.js"></script>
+    <!-- Toastr -->
+    <script src="<%= BASE_URL %>plugins/toastr/toastr.min.js"></script>
 
-<!-- Select2 -->
-<script src="<%= BASE_URL %>plugins/select2/js/select2.full.min.js"></script>
+    <!-- Select2 -->
+    <script src="<%= BASE_URL %>plugins/select2/js/select2.full.min.js"></script>
 
 
-  <!-- AdminLTE App -->
-  <script src="<%= BASE_URL %>js/adminlte.js"></script>
-  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-  <!-- <script src="<%= BASE_URL %>js/pages/dashboard.js"></script> -->
-  <!-- AdminLTE for demo purposes -->
-  <script src="<%= BASE_URL %>js/demo.js"></script>
+    <!-- AdminLTE App -->
+    <script src="<%= BASE_URL %>js/adminlte.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <!-- <script src="<%= BASE_URL %>js/pages/dashboard.js"></script> -->
+    <!-- AdminLTE for demo purposes -->
+    <script src="<%= BASE_URL %>js/demo.js"></script>
 
-  <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
-  
-</body>
+    <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+
+    </body>
 
 
 </html>
