Add vistantes component

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,8 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-  <li </head> <body>
+  </head> 
+  <body>
 
     <div class="wrapper">
       <div id="app"></div>
