--- a/public/index.html
+++ b/public/index.html
@@ -43,65 +43,66 @@
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 
-  </head> 
-  <body>
+</head>
 
-    <div class="wrapper">
-      <div id="app"></div>
+<body>
 
-    </div>
+  <div class="wrapper">
+    <div id="app"></div>
 
-
-    <!-- jQuery -->
-    <script src="<%= BASE_URL %>plugins/jquery/jquery.min.js"></script>
-    <!-- jQuery UI 1.11.4 -->
-    <script src="<%= BASE_URL %>plugins/jquery-ui/jquery-ui.min.js"></script>
-    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
-    <script>
-      $.widget.bridge('uibutton', $.ui.button)
-    </script>
-    <!-- Bootstrap 4 -->
-    <script src="<%= BASE_URL %>plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- ChartJS -->
-    <script src="<%= BASE_URL %>plugins/chart.js/Chart.min.js"></script>
-    <!-- Sparkline -->
-    <script src="<%= BASE_URL %>plugins/sparklines/sparkline.js"></script>
-    <!-- JQVMap -->
-    <script src="<%= BASE_URL %>plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="<%= BASE_URL %>plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
-    <!-- jQuery Knob Chart -->
-    <script src="<%= BASE_URL %>plugins/jquery-knob/jquery.knob.min.js"></script>
-    <!-- daterangepicker -->
-    <script src="<%= BASE_URL %>plugins/moment/moment.min.js"></script>
-    <script src="<%= BASE_URL %>plugins/daterangepicker/daterangepicker.js"></script>
-    <!-- Tempusdominus Bootstrap 4 -->
-    <script src="<%= BASE_URL %>plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-    <!-- Summernote -->
-    <script src="<%= BASE_URL %>plugins/summernote/summernote-bs4.min.js"></script>
-    <!-- overlayScrollbars -->
-    <script src="<%= BASE_URL %>plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
-
-    <!-- DataTables -->
-    <script src="<%= BASE_URL %>plugins/datatables/jquery.dataTables.js"></script>
-    <script src="<%= BASE_URL %>plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
-
-    <!-- Toastr -->
-    <script src="<%= BASE_URL %>plugins/toastr/toastr.min.js"></script>
-
-    <!-- Select2 -->
-    <script src="<%= BASE_URL %>plugins/select2/js/select2.full.min.js"></script>
+  </div>
 
 
-    <!-- AdminLTE App -->
-    <script src="<%= BASE_URL %>js/adminlte.js"></script>
-    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <!-- <script src="<%= BASE_URL %>js/pages/dashboard.js"></script> -->
-    <!-- AdminLTE for demo purposes -->
-    <script src="<%= BASE_URL %>js/demo.js"></script>
+  <!-- jQuery -->
+  <script src="<%= BASE_URL %>plugins/jquery/jquery.min.js"></script>
+  <!-- jQuery UI 1.11.4 -->
+  <script src="<%= BASE_URL %>plugins/jquery-ui/jquery-ui.min.js"></script>
+  <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+  <script>
+    $.widget.bridge('uibutton', $.ui.button)
+  </script>
+  <!-- Bootstrap 4 -->
+  <script src="<%= BASE_URL %>plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- ChartJS -->
+  <script src="<%= BASE_URL %>plugins/chart.js/Chart.min.js"></script>
+  <!-- Sparkline -->
+  <script src="<%= BASE_URL %>plugins/sparklines/sparkline.js"></script>
+  <!-- JQVMap -->
+  <script src="<%= BASE_URL %>plugins/jqvmap/jquery.vmap.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+  <!-- jQuery Knob Chart -->
+  <script src="<%= BASE_URL %>plugins/jquery-knob/jquery.knob.min.js"></script>
+  <!-- daterangepicker -->
+  <script src="<%= BASE_URL %>plugins/moment/moment.min.js"></script>
+  <script src="<%= BASE_URL %>plugins/daterangepicker/daterangepicker.js"></script>
+  <!-- Tempusdominus Bootstrap 4 -->
+  <script src="<%= BASE_URL %>plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+  <!-- Summernote -->
+  <script src="<%= BASE_URL %>plugins/summernote/summernote-bs4.min.js"></script>
+  <!-- overlayScrollbars -->
+  <script src="<%= BASE_URL %>plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 
-    <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+  <!-- DataTables -->
+  <script src="<%= BASE_URL %>plugins/datatables/jquery.dataTables.js"></script>
+  <script src="<%= BASE_URL %>plugins/datatables-bs4/js/dataTables.bootstrap4.js"></script>
 
-    </body>
+  <!-- Toastr -->
+  <script src="<%= BASE_URL %>plugins/toastr/toastr.min.js"></script>
+
+  <!-- Select2 -->
+  <script src="<%= BASE_URL %>plugins/select2/js/select2.full.min.js"></script>
+
+
+  <!-- AdminLTE App -->
+  <script src="<%= BASE_URL %>js/adminlte.js"></script>
+  <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+  <!-- <script src="<%= BASE_URL %>js/pages/dashboard.js"></script> -->
+  <!-- AdminLTE for demo purposes -->
+  <script src="<%= BASE_URL %>js/demo.js"></script>
+
+  <script src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js"></script>
+</body>
 
 
 </html>
